--- a/packages.html
+++ b/packages.html
@@ -50,23 +50,24 @@
 <hr>
 
 <h2>Planning</h2>
-<p class="home">Our waistlist is long, as we are one of the only space tourism companies. To meet everypone's demands we hope that you can be patient with us. We will try to do everything to make this a wonderful expierence for you. In order to book the earlist slot make sure to provide all the correct information as well as proof of yout Space Visa. The entire trip from training to recovery will take 2 months. Please note this can be longer if your body takes longer to adjust when you land.</p>
+<p class="home">Our waitlist is long, as we are one of the only space tourism companies available. To meet everyone's demands we hope that you can be patient with us. We will try to do everything to make this a wonderful experience for you. To book the earliest slot make sure to provide all the correct information as well as proof of your Space Visa. The entire trip from training to recovery will take 1.5-2 months. Please note this can be longer if your body takes longer to adjust when you land.</p>
 
 <h2>Training</h2>
-<p class="home">We have a 2 week long training camp that all travellers must go thorugh. During this time you are put to test in simulated environment to show you what you will feel like in space. You are also put in clothing and suits that you would wear daily in space. If you do not adapt in this 2 week time period we recommend that you do not continue with this trip due to health risks.</p>
+<p class="home">We have a 2-week long training camp that all travelers must go through. During this time you are put to test in a simulated environment to show you what you will feel like in space. You are also put in clothing and suits that you would wear daily in space. This training puts to test how you will feel and move in space. If you do not adapt in this 2-week time period we recommend that you do not continue with this trip due to health risks. </p>
 
 <div class="contenttravel">
-  <img src="/vechile.png" alt="space ship" style="width:100%">
+  <img src="/vehicles.png" alt="2 space ships" style="width:100%">
   <h3>Vechiles</h3>
-  <p>Our vechiles get designed by some of the best engineers to meet our high standards. We have long testing periods for each vechile to ensure that they are safe for our passengers. The vechile you will board on will depend on how mnay people we have flying out that day. The two vechiles are not too different from one another, so the experience is similar in both. We try to be energy efficent when we have a smaller group, which is why we have two different vechiles. In our vechiles you will feel just like you are at home due to our advanced technology that adjusts the environment inside the ship or plane to be the same as on earth. </p>
- 
+  <p>Our vehicles get designed by the best engineers to meet our high standards. We have long and detailed testing periods for each vehicle to ensure they are safe for our passengers. The vehicle you will board will depend on how many people we have flying out that day. The two vehicles are not too different from one another, so the experience is similar in both. We try to be energy efficient when we have a smaller group, which is why we have two different vehicles. In our vehicles, you will feel just like you are at home due to our accommodations and advanced technology that adjusts the environment inside the ship or plane to be similar to the one on Earth. However, this environment is not the exact same which is why the training period is so essential for every traveler. 
+	</p>
 </div>
 
 <h2>Launch Process</h2>
 <p class="travelText">The launching process is similar to taking off in a flight, except it is longer and you will be wearing your suits. It takes around 17 hours to get to space and we encourage that you do not move out of your seat unless it is an emergency.</p>
 
+	
 	<h2>Packages</h2>
-<p class="travelText">Each package includes the cost of training, equipment, and recovery. The cost for additional upgrades is not listed as it is depends on each flight. </p>
+<p class="travelText">Each package includes the cost of training, equipment, and recovery. The cost for additional upgrades is not listed as it depends on each flight. All of the packages include a trip that is 14 days long.  </p>
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
@@ -74,38 +75,38 @@
     <div class="contenttravel">
       <img src="/solo.png" style="width:100%">
       <h3>Solo Trip</h3>
-      <p>It costs $10,000 which includes a room with a single bed, food, drinks, and equipment. </p>
+      <p>It costs $10,000 which includes an en suite room with a single bed, food, drinks, and equipment. </p>
     </div>
   </div>
   <div class="column">
     <div class="contenttravel">
     <img src="/couple.png" alt="couple" style="width:100%">
       <h3>Honeymoon Package</h3>
-      <p>This packes is made for couples who need a romantic getaway.</p>
+      <p>This pack is made for couples who need a romantic getaway. The cost for 2 people is $18,500. This includes an en suite room with a king bed, food, drinks, and access to a private lounge. </p>
     </div>
   </div>
   <div class="column">
     <div class="contenttravel">
     <img src="/family.png" alt="family" style="width:100%">
       <h3>Small Group/Family</h3>
-      <p>This package is for groups of three. It includes </p>
+      <p>This package is for groups of three. It costs includes $27,800 for all 3 people. That includes either 3 single en suite rooms or one double and one single en suite room. Food and drinks are also included in the package. </p>
     </div>
   </div>
   <div class="column">
     <div class="contenttravel">
     <img src="/party.png" alt="party" style="width:100%">
       <h3>Party Pack</h3>
-      <p>This packages requires you to have 4 or more people. It costs $9,000/person, which insludes private single bedrooms, food, drinks, and access to private areas of the vechile.</p>
+      <p>This package requires you to have 4 or more people. It costs $8,500/person, which includes private single or double bedrooms and access to private areas of the vehicle. The cost for food and drinks will be separate depending on how large the group is.</p>
     </div>
   </div>
 <!-- END GRID -->
 </div>
 	
-<div class="contenttravel">
-  <h3>Recovery</h3>
-  <p>Most astronauts take around 45 days to recover from being in space(Wayne). Due to our high technology systems our passengers only need 15-30 days to recover. However, there may be excepts if you have other health risks. During this period you are doing the opposite of what you did in training. Slowly every day we turn the space simulation down until you are back to earth's environment. You are also encourages to do physical activity every day, as being in space changes the way you move around in a normal setting.</p>
+
+  <h2>Recovery</h2>
+  <p class="travelText">Most astronauts take around 45 days to recover from being in space(Wayne). However, due to our high technology systems, our passengers only need 15-30 days to recover. However, there may be exceptions if you have other health risks. During this period you are doing the opposite of what you did in training. Slowly every day we turn the space simulation down until you are back in Earth's environment. You are also encouraged to do physical activity every day, as being in space changes the way you move around in a normal setting.</p>
  
-</div>
+
 	
 
 
